# csv2ics

./: .gitignore  Cargo.toml  README.md  template.csv
src/: main.rs
